feat(root folder/home.html): Add .gitignore to the root folder/styling header

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -15,9 +15,9 @@
             <div class="icon">
                 <a href="">Faz Aê</a>
             </div>
-            <div class="header-bts">
-                <button>Entrar</button>
-                <button>Cadastrar-se</button>
+            <div class="bts-container">
+                <button class="header-bts">Entrar</button>
+                <button class="header-bts">Cadastrar-se</button>
 
                 <button class="menu-hamburguer" aria-expanded="false" aria-controls="menu-principal">
                     <span class="linha"></span>
@@ -41,7 +41,7 @@
         </aside>
 
         <main class="main-content">
-            <div>
+            <div class="main-header">
                 <h1>Conecte-se com os melhores freelancers</h1>
                 <p>A plataforma que conecta profissionais talentosos com projetos incríveis. Encontre o freelancer ideal
                     ou ofereça seus serviços.</p>
