--- a/src/html/home.html
+++ b/src/html/home.html
@@ -40,14 +40,14 @@
 
         </aside>
 
-        <main class="main-content">
+        <main>
             <div class="main-header">
                 <h1>Conecte-se com os melhores freelancers</h1>
                 <p>A plataforma que conecta profissionais talentosos com projetos incríveis. Encontre o freelancer ideal
                     ou ofereça seus serviços.</p>
             </div>
-            <div>
-                <div>
+            <div class="main-content">
+                <div class="cards-container">
                     <div class="card">
                         <div class="card-title">
                             <h3>Serviços de Limpeza e Organização</h3>
@@ -64,6 +64,42 @@
                         <div class="card-title">
                             <h3>Serviços de Limpeza e Organização</h3>
 
+                            <p>Avaliação Média</p>
+                        </div>
+                        <div class="card-description">
+                            <p>Ofereço serviços de limpeza residencial e comercial de alta qualidade, com foco em
+                                eficiência, atenção aos detalhes e total confiança. Meu objetivo é transformar seu
+                                espaço em um ambiente impecável, organizado e acolhedor, liberando seu tempo para o que
+                                realmente importa.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title">
+                            <h3>Serviços de Limpeza e Organização</h3>
+                            <p>Avaliação Média</p>
+                        </div>
+                        <div class="card-description">
+                            <p>Ofereço serviços de limpeza residencial e comercial de alta qualidade, com foco em
+                                eficiência, atenção aos detalhes e total confiança. Meu objetivo é transformar seu
+                                espaço em um ambiente impecável, organizado e acolhedor, liberando seu tempo para o que
+                                realmente importa.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title">
+                            <h3>Serviços de Limpeza e Organização</h3>
+                            <p>Avaliação Média</p>
+                        </div>
+                        <div class="card-description">
+                            <p>Ofereço serviços de limpeza residencial e comercial de alta qualidade, com foco em
+                                eficiência, atenção aos detalhes e total confiança. Meu objetivo é transformar seu
+                                espaço em um ambiente impecável, organizado e acolhedor, liberando seu tempo para o que
+                                realmente importa.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-title">
+                            <h3>Serviços de Limpeza e Organização</h3>
                             <p>Avaliação Média</p>
                         </div>
                         <div class="card-description">
