Revert "Iniciando tela de login"

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -16,6 +16,9 @@
                 <a href="">Faz Aê</a>
             </div>
             <div class="bts-container">
+                <button class="header-bts">Entrar</button>
+                <button class="header-bts">Cadastrar-se</button>
+
                 <button class="menu-hamburguer" aria-expanded="false" aria-controls="menu-principal">
                     <span class="linha"></span>
                     <span class="linha"></span>
