Adicionando tela sobre nós

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -27,7 +27,7 @@
 
                 <ul class="menu-navegacao" id="menu-principal">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="sobrenos.html">Sobre</a></li>
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
